2008-12-21  Zoltan Rado  <z.rado@chello.hu>  (tiny change)

	* doc/automake.texi (DESTDIR): Fix a couple of typos.
	* THANKS: Update.

2008-12-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix nonportable sed script in 'missing'.
	* lib/missing: In sed script, do not use ';' after 't' commands.

2008-12-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	PR automake/531:
	* doc/automake.texi (amhello Explained)
	(Mixing Fortran 77 With C and C++): Fix broken links to
	Autoconf manual.
	Report by Michael Ploujnikov.

2008-12-07  Michael Ploujnikov  <ploujj@gmail.com>  (tiny change)

	* doc/automake.texi (Optional, Future of aclocal): Various
	spelling and grammar fixes.
	* THANKS: Update.

2008-12-03  William Pursell  <bill.pursell@gmail.com>

	Simple typographical and grammar errors in automake.texi.
	* doc/automake.texi: Fix object/article consistency (eg "an
	flag" becomes "a flag"), correct minor punctuation errors, etc.

	* doc/automake.texi (Auxiliary Programs, Python, Rebuilding):
	Replace 'configure' with '@command{configure}' as appropriate.

2008-11-29  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fixup release rules.
	* Makefile.am (cvs-diff): Remove.
	(git-dist): Do not use clcommit any more.  Use new-style tag
	name.  Pass $(AM_MAKEFLAGS) to $(MAKE).
	(git-diff): Adjust.
	(git-release): Do not upload to sources.redhat.com.

2008-11-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix portability issues in distcleancheck_listfiles doc example.
	* doc/automake.texi (Dist): In the `distcleancheck_listfiles'
	code example, add `.' path, for Solaris `find', also rewrite so
	`{}' appears only once and as separate argument, for Posix.
	* tests/distcleancheck.test: New test.
	* tests/Makefile.am: Update.
	* THANKS: Update.
	Report by Jan Engelhardt and Andreas Schwab.

2008-11-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	    Jim Meyering  <jim@meyering.net>

	Cope with whitespace in $MISSING and $install_sh.