@@ -190,6 +190,7 @@ Mark Galassi		rosalia@nis.lanl.gov
 Mark Mitchell		mark@codesourcery.com
 Mark Phillips		msp@nortelnetworks.com
 Markku Rossi		mtr@ngs.fi
+Markus Duft		Markus.Duft@salomon.at
 Markus F.X.J. Oberhumer	k3040e4@wildsau.idv-edu.uni-linz.ac.at
 Martin Bravenboer	martin@cs.uu.nl
 Martin Frydl		martin@idoox.com
