@@ -1,3 +1,15 @@
+2008-12-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Fix config.status depfiles failure.
+	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Commands are
+	again a single shell brace group, so they are correctly skipped
+	when dependencies are turned off.  The failure is noisy with
+	ksh only.
+	* tests/depend6.test: New test.
+	* tests/Makefile.am: Adjust.
+	* THANKS: Update.
+	Report and different suggested patch by Markus Duft.
+
 2008-12-21  Zoltan Rado  <z.rado@chello.hu>  (tiny change)
 
 	* doc/automake.texi (DESTDIR): Fix a couple of typos.
